<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/test"
            android:textSize="40sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/purple_700" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#E9EDE7E7"
                android:text="@string/fever"
                android:textColor="#0C0C0C"
                android:textColorHighlight="#673AB7"
                android:textColorLink="#673AB7"
                android:textCursorDrawable="@color/purple_500"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="#E9EDE7E7" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#E9EDE7E7"
                android:text="@string/dry_cough"
                android:textColor="#0C0C0C"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="#E9EDE7E7" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#E9EDE7E7"
                android:text="@string/tired"
                android:textColor="#0C0C0C"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="#E9EDE7E7" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#E9EDE7E7"
                android:text="@string/stiffness"
                android:textColor="#0C0C0C"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="#E9EDE7E7" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#E9EDE7E7"
                android:text="@string/sore_throat"
                android:textColor="#0C0C0C"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="#E9EDE7E7" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#E9EDE7E7"
                android:text="@string/diarrhea"
                android:textColor="#0C0C0C"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="#E9EDE7E7" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#E9EDE7E7"
                android:text="@string/conjunctivitis"
                android:textColor="#0C0C0C"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="#E9EDE7E7" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#E9EDE7E7"
                android:text="@string/headache"
                android:textColor="#0C0C0C"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="#E9EDE7E7" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#E9EDE7E7"
                android:text="@string/loss_of_smell_or_taste"
                android:textColor="#0C0C0C"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="#E9EDE7E7" />
            <Button
                android:id="@+id/btn_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/test"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>