<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_gravity="center"
        android:textSize="40sp"/>

    <!--
        <View
            android:background="@color/colorPrimary"
            android:layout_width = "match_parent"
            android:layout_height="3dp"/>
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btn_advices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/purple_500"
            android:text="@string/advices"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/purple_500"
            android:text="@string/test"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_rate_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/purple_500"
            android:text="@string/rate_us"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>