<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvicesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/advices"
            android:textSize="40sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/purple_700" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/black"
                android:checkable="false"
                android:clickable="false"
                android:text="@string/always_put_on_your_mask"
                android:textColor="#0C0C0C"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="#E9EDE7E7"
                android:drawableLeft="@drawable/a" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:checkable="false"
                android:clickable="false"
                android:text="@string/clean_your_hands_with_alcohol"
                android:textColor="#0C0C0C"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="#E9EDE7E7"
                android:drawableLeft="@drawable/a"/>

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:checkable="false"
                android:clickable="false"
                android:text="@string/don_t_be_so_close_to_other_peoples"
                android:textColor="#0C0C0C"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="#E9EDE7E7"
                android:drawableLeft="@drawable/a"/>

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:checkable="false"
                android:clickable="false"
                android:text="@string/always_user_a_tissue_after_cough"
                android:textColor="#0C0C0C"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="#E9EDE7E7"
                android:drawableLeft="@drawable/a"/>

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:checkable="false"
                android:clickable="false"
                android:text="@string/if_you_some_symptoms_stay_home_andcall_198"
                android:textColor="#0C0C0C"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="#E9EDE7E7"
                android:drawableLeft="@drawable/a"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>