<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:padding="10dp"
        android:gravity="center_horizontal" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:id="@+id/linearLayout">

        <Button android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/signin"
            android:text="@string/sign_in"
            android:layout_weight="1"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/signup"
            android:text="@string/sign_up"
            android:layout_weight="1"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:id="@+id/fragmentLayout"
        android:layout_marginBottom="8dp">
    </LinearLayout>

</LinearLayout>